Grace/tests/gibbs/errors/z1003.grace
// ERROR = P1016
if (true)
  then {
      print "true"
    print "here"
  }
  else { print "false" }
